# gnomato

./: .gitignore  AUTHORS  Dockerfile  Doxyfile  Makefile.am  README  README.md  autogen.sh  configure.ac  gnomato.desktop.in
data/: Makefile.am  com.diegorubin.gnomato.gschema.xml  gnomato.ui
doc/html/: annotated.html  class_win_main-members.html  class_win_main.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cc.html  win__main_8cc.html  win__main_8h.html  win__main_8h_source.html
doc/html/search/: all_6d.html  all_77.html  classes_77.html  files_6d.html  files_77.html  functions_6d.html  functions_73.html  functions_77.html  functions_7e.html  search.js
examples/: gnomato.py
po/: LINGUAS  POTFILES.in  es.po  fr.po  gnomato.pot  pt_BR.po
src/: Makefile.am  config.cc  config.h  database.cc  database.h  dbus_client.cc  dbus_client.h  dialog_preferences.cc  dialog_preferences.h  dialog_task.cc  dialog_task.h  dialog_work_log_entries.cc  dialog_work_log_entries.h  main.cc  python_executor.cc  python_executor.h  sound_player.cc  sound_player.h  sqls.h  task.cc  task.h  task_list.cc  task_list.h  utils.cc  utils.h  win_main.cc  win_main.h  wunderlist.cc  wunderlist.h
